trunk/tools/com/biswa/ep/util/parser/predicate/PredicateBuilder.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PredicateBuilder.java */
package com.biswa.ep.util.parser.predicate;

import java.io.ByteArrayInputStream;

import com.biswa.ep.entities.predicate.Predicate;
import com.biswa.ep.entities.predicate.True;
import com.biswa.ep.util.parser.predicate.impl.PredicateBuilderVisitorImpl;
/** Predicate Grammar. */
public class PredicateBuilder/*@bgen(jjtree)*/implements PredicateBuilderTreeConstants, PredicateBuilderConstants {/*@bgen(jjtree)*/
  protected JJTPredicateBuilderState jjtree = new JJTPredicateBuilderState();
  /** Entry point. */
  public static void main(String args[]) {
    System.out.println("Reading from standard input...");
    try {
    while(true){
      PredicateBuilder t = new PredicateBuilder(System.in);
      ASTStart n = t.Start();
      n.dump("Preorder Tree:");
      PredicateBuilderVisitorImpl v = new PredicateBuilderVisitorImpl();
      n.jjtAccept(v, null);
      Predicate p = v.getPredicate();
      System.out.println("Thank you.");
      }
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }
    /** Entry point. */
  public static Predicate buildPredicate(String strPredicate) {
        if(strPredicate==null || strPredicate.trim().isEmpty()){
                return new com.biswa.ep.entities.predicate.True();
        }
        Predicate p = null;
    try {
      PredicateBuilder t = new PredicateBuilder(new ByteArrayInputStream((strPredicate+";").getBytes()));
      ASTStart n = t.Start();
      PredicateBuilderVisitorImpl v = new PredicateBuilderVisitorImpl();
      n.jjtAccept(v, null);
      p = v.getPredicate();
    } catch (Exception e) {
                throw new RuntimeException(e);
    }
    return p;
  }

/** Main production. */
  final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Predicate();
      jj_consume_token(24);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/** A Predicate. */
  final public void Predicate() throws ParseException {
    if (jj_2_1(2147483647)) {
      OrPredicate();
    } else if (jj_2_2(2147483647)) {
      AndPredicate();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case 25:
      case 28:
        SimplePredicate();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** An Or Predicate. */
  final public void OrPredicate() throws ParseException {
                      /*@bgen(jjtree) OrPredicate */
  ASTOrPredicate jjtn000 = new ASTOrPredicate(JJTORPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      AndOrSimple();
      label_1:
      while (true) {
        jj_consume_token(OR);
        AndOrSimple();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** An Or Predicate. */
  final public void AndOrSimple() throws ParseException {
    if (jj_2_3(2147483647)) {
      AndPredicate();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case 25:
      case 28:
        SimplePredicate();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** An And Predicate. */
  final public void AndPredicate() throws ParseException {
                       /*@bgen(jjtree) AndPredicate */
  ASTAndPredicate jjtn000 = new ASTAndPredicate(JJTANDPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SimplePredicate();
      label_2:
      while (true) {
        jj_consume_token(AND);
        SimplePredicate();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** A Unary Expression. */
  final public void SimplePredicate() throws ParseException {
                          /*@bgen(jjtree) SimplePredicate */
  ASTSimplePredicate jjtn000 = new ASTSimplePredicate(JJTSIMPLEPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_4(2147483647)) {
        EmptyPredicate();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
          jj_consume_token(25);
          Predicate();
          jj_consume_token(26);
          break;
        default:
          jj_la1[4] = jj_gen;
          if (jj_2_5(2147483647)) {
            TruePredicate();
          } else if (jj_2_6(2147483647)) {
            FalsePredicate();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 28:
              EndPoint();
              break;
            default:
              jj_la1[5] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void EndPoint() throws ParseException {
                 /*@bgen(jjtree) EndPoint */
        ASTEndPoint jjtn000 = new ASTEndPoint(JJTENDPOINT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);String name;
    try {
      Attribute();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
      case NE:
      case GT:
      case LT:
      case GE:
      case LE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQ:
          jj_consume_token(EQ);
            name="Eq";
          break;
        case NE:
          jj_consume_token(NE);
            name="Ne";
          break;
        case GT:
          jj_consume_token(GT);
            name="Gt";
          break;
        case LT:
          jj_consume_token(LT);
                name="Lt";
          break;
        case GE:
          jj_consume_token(GE);
            name="Ge";
          break;
        case LE:
          jj_consume_token(LE);
            name="Le";
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DECIMAL_LITERAL:
        case STRING_LITERAL:
          Operand();
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                     jjtn000.setImage(name);
          break;
        case 28:
          AttributeOperand();
                                                                  jjtree.closeNodeScope(jjtn000, true);
                                                                  jjtc000 = false;
                                                                 jjtn000.setImage("A"+name);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case IN:
        jj_consume_token(IN);
            jjtn000.setImage("In");
        jj_consume_token(25);
        Operand();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 27:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_3;
          }
          jj_consume_token(27);
          Operand();
        }
        jj_consume_token(26);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** An Attribute. */
  final public void Attribute() throws ParseException {
 /*@bgen(jjtree) Attribute */
  ASTAttribute jjtn000 = new ASTAttribute(JJTATTRIBUTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(28);
      t = jj_consume_token(ATTRIBUTE);
    jjtn000.setImage(t.image);
      jj_consume_token(29);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** An Attribute Operand. */
  final public void AttributeOperand() throws ParseException {
 /*@bgen(jjtree) AttributeOperand */
  ASTAttributeOperand jjtn000 = new ASTAttributeOperand(JJTATTRIBUTEOPERAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(28);
      t = jj_consume_token(ATTRIBUTE);
    jjtn000.setImage(t.image);
      jj_consume_token(29);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** An Operand. */
  final public void Operand() throws ParseException {
                 /*@bgen(jjtree) Operand */
  ASTOperand jjtn000 = new ASTOperand(JJTOPERAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING_LITERAL:
        SOperand();
        break;
      case DECIMAL_LITERAL:
        DOperand();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** An Operand. */
  final public void SOperand() throws ParseException {
 /*@bgen(jjtree) SOperand */
  ASTSOperand jjtn000 = new ASTSOperand(JJTSOPERAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(STRING_LITERAL);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setImage(t.image.substring(1,t.image.length()-1));
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** An Operand. */
  final public void DOperand() throws ParseException {
 /*@bgen(jjtree) DOperand */
  ASTDOperand jjtn000 = new ASTDOperand(JJTDOPERAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(DECIMAL_LITERAL);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setImage(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** True Predicate. */
  final public void TruePredicate() throws ParseException {
 /*@bgen(jjtree) TruePredicate */
  ASTTruePredicate jjtn000 = new ASTTruePredicate(JJTTRUEPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(TRUE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setImage("True");
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** Empty Predicate. */
  final public void EmptyPredicate() throws ParseException {
                        /*@bgen(jjtree) EmptyPredicate */
  ASTEmptyPredicate jjtn000 = new ASTEmptyPredicate(JJTEMPTYPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(25);
      jj_consume_token(26);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setImage("True");
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/** False Predicate. */
  final public void FalsePredicate() throws ParseException {
 /*@bgen(jjtree) FalsePredicate */
  ASTFalsePredicate jjtn000 = new ASTFalsePredicate(JJTFALSEPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(FALSE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setImage("False");
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_3R_38() {
    if (jj_scan_token(28)) return true;
    if (jj_scan_token(ATTRIBUTE)) return true;
    if (jj_scan_token(29)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_scan_token(OR)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_5() {
    if (jj_3R_11()) return true;
    Token xsp;
    if (jj_3R_12()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_12()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3R_37() {
    if (jj_scan_token(27)) return true;
    if (jj_3R_36()) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) return true;
    }
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_25() {
    if (jj_scan_token(28)) return true;
    if (jj_scan_token(ATTRIBUTE)) return true;
    if (jj_scan_token(29)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_4() {
    if (jj_3R_9()) return true;
    Token xsp;
    if (jj_3R_10()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_10()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_23() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_22() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_24() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3R_27() {
    if (jj_scan_token(IN)) return true;
    if (jj_scan_token(25)) return true;
    if (jj_3R_36()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_37()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(26)) return true;
    return false;
  }

  private boolean jj_3R_34() {
    if (jj_3R_36()) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3R_33() {
    if (jj_scan_token(LE)) return true;
    return false;
  }

  private boolean jj_3R_32() {
    if (jj_scan_token(GE)) return true;
    return false;
  }

  private boolean jj_3R_31() {
    if (jj_scan_token(LT)) return true;
    return false;
  }

  private boolean jj_3R_6() {
    if (jj_scan_token(25)) return true;
    if (jj_scan_token(26)) return true;
    return false;
  }

  private boolean jj_3R_30() {
    if (jj_scan_token(GT)) return true;
    return false;
  }

  private boolean jj_3R_7() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  private boolean jj_3R_29() {
    if (jj_scan_token(NE)) return true;
    return false;
  }

  private boolean jj_3R_28() {
    if (jj_scan_token(EQ)) return true;
    return false;
  }

  private boolean jj_3R_26() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) {
    jj_scanpos = xsp;
    if (jj_3R_33()) return true;
    }
    }
    }
    }
    }
    xsp = jj_scanpos;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) return true;
    }
    return false;
  }

  private boolean jj_3R_42() {
    if (jj_scan_token(DECIMAL_LITERAL)) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3R_21() {
    if (jj_3R_25()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) return true;
    }
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_40() {
    if (jj_3R_42()) return true;
    return false;
  }

  private boolean jj_3R_41() {
    if (jj_scan_token(STRING_LITERAL)) return true;
    return false;
  }

  private boolean jj_3R_19() {
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_16() {
    if (jj_scan_token(25)) return true;
    if (jj_3R_20()) return true;
    if (jj_scan_token(26)) return true;
    return false;
  }

  private boolean jj_3R_39() {
    if (jj_3R_41()) return true;
    return false;
  }

  private boolean jj_3R_36() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_39()) {
    jj_scanpos = xsp;
    if (jj_3R_40()) return true;
    }
    return false;
  }

  private boolean jj_3R_35() {
    if (jj_3R_38()) return true;
    return false;
  }

  private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_3R_6()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public PredicateBuilderTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x12030000,0x100,0x12030000,0x80,0x2000000,0x10000000,0xde00,0x10140000,0x8000000,0xfe00,0x140000,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[6];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public PredicateBuilder(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PredicateBuilder(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PredicateBuilderTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
